--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-ui-bootstrap": "^0.14.3",
     "angular-ui-router": "^0.2.15",
     "browserify-shim": "^3.8.11",
+    "express": "^4.13.3",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
